[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/home_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Friends/Friendslist.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[node name="Friendslist" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
size_flags_vertical = 7
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.980392, 0.760784, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 1 )
text = "Friends"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
self_modulate = Color( 1, 0.368627, 0.368627, 1 )
margin_left = 37.0
margin_top = 25.0
margin_right = 105.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileRequest" type="HTTPRequest" parent="."]

[node name="RequestsRequest" type="HTTPRequest" parent="."]

[node name="ErrorMessage" type="CanvasLayer" parent="."]
layer = 15

[node name="Label" type="Label" parent="ErrorMessage"]
anchor_left = 0.00976563
anchor_top = 0.209961
anchor_right = 0.989258
anchor_bottom = 0.358398
custom_fonts/font = SubResource( 1 )
text = "! Cannot be loaded !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 112.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1004.0
margin_bottom = 912.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
